<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Space Travel</string>
    <string name="hello_earth">Hello Earth!</string>
    <string name="action_settings">Settings</string>
    <string name="stay_earth_button">Enter</string>
    <string name="to_earth_hint">To Earth</string>
    <string name="leave_earth_button">Leave</string>
    <string name="leave_earth_hint">Leave Earth</string>
    <string name="hello_mars">Hello Mars!</string>
    <string name="enter_mars_button">Enter</string>
    <string name="enter_mars_hint">Enter Mars</string>
    <string name="leave_mars_button">Leave</string>
    <string name="leave_mars_hint">Leave Mars</string>
    <string name="users_name_hint">First Name</string>

</resources>
