<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:orientation="vertical"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:gravity="center|top"
    android:id="@+id/linear_layout"
    android:background="@drawable/space"
    >



    <EditText
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/users_name_hint"
        android:background="@color/background_material_light"

        android:id="@+id/usersName"/>
    <TextView
        android:text="@string/hello_earth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:textColor="@color/background_floating_material_light"
        />

    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|top"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stay_earth_button"
            android:hint="@string/to_earth_hint"
            android:onClick="onStayEarthButton"
            android:id="@+id/stay_earth_button"
            />
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_earth_button"
            android:hint="@string/leave_earth_hint"
            android:onClick="onLeaveEarthButton"
            android:id="@+id/leave_earth_button"/>


    </LinearLayout>
    <TextView
        android:text="@string/hello_mars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/background_floating_material_light"
        android:textSize="30dp"
        />
    <LinearLayout
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:orientation="horizontal"
        android:gravity="center|top"
        android:layout_height="wrap_content">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_mars_button"
            android:hint="@string/enter_mars_hint"
            android:onClick="onStayMarsButton"
            android:id="@+id/stay_mars_button"/>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leave_mars_button"
            android:hint="@string/leave_mars_hint"
            android:onClick="onLeaveMarsButton"
            android:id="@+id/leave_mars_button"/>


    </LinearLayout>



</LinearLayout>

